--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -121,10 +121,12 @@
     }
 
     @media screen and (max-width: 450px) {
+      margin-left: 2.1rem;
       margin-top: 1rem;
       p {
         font-size: 0.9rem;
         line-height: 25px;
+        text-align: center;
       }
     }
   }
@@ -135,6 +137,12 @@
     @media screen and (min-width: 2000px) {
       font-size: 5rem;
     }
+  }
+
+  @media screen and (max-width: 450px) {
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
   }
 
   @media screen and (max-width: 1200px) {
@@ -210,7 +218,7 @@
     div:nth-child(1) {
       width: 52px;
       height: 52px;
-      margin: 0.3rem
+      margin: 0.3rem;
     }
   }
 
