--- a/src/containers/Footer/Footer.scss
+++ b/src/containers/Footer/Footer.scss
@@ -141,3 +141,9 @@
   color: rgb(0, 0, 0);
   font-weight: 500;
 }
+
+@media screen and (max-width: 450px) {
+  .submitted {
+    font-size: 1.5rem;
+  }
+}
