--- a/src/containers/Articles/Articles.scss
+++ b/src/containers/Articles/Articles.scss
@@ -13,12 +13,14 @@
   align-items: flex-start;
   flex-direction: column;
   margin: 1.5rem;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  padding: 5px;
 
   img {
     width: 100%;
-    height: 220px;
+    height: 190px;
     object-fit: cover;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 
   p {
@@ -31,11 +33,19 @@
   }
 
   a {
-    background-color: var(--secondary-color);
     padding: 10px 15px;
     margin-top: 10px;
-    color: var(--white-color);
     text-decoration: none;
+    width: 100%;
+    text-align: center;
+    background-color: var(--white-color);
+    color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+
+    &:hover {
+      background-color: var(--secondary-color);
+      color: var(--white-color);
+    }
   }
 }
 
